--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <script src="bundle.js"></script>
+    <div id="ifc-data-container" class="container"> </div>
 </body>
 </html>
